# Pwnzocchi

./: .env  .gitignore  .pre-commit-config.yaml  README.md  Warwalker.sln  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  launch.json  main.py
core/modules/: config.py  interface_setup.py  scanner.py
core/tests/: test_config.py  test_interface_setup.py  test_scanner.py
pipeline/: README.md  layer1.py  layer2.py  layer3.py  layer4.py
reconx/: README.md  desktop.ini  pyproject.toml  recon_layer1.sh  recon_layer2.sh
reconx/examples/: rules.yaml  scope.json
reconx/fixtures/: layer1_summary.json  layer2_summary.json  nmap_basic.xml
reconx/reconx/: __main__.py  state.py  utils.py
reconx/reconx/adapters/: __init__.py  base.py
reconx/reconx/model/: __init__.py
reconx/reconx/parsers/: __init__.py  nmap.py  summaries.py
reconx/reconx/report/: __init__.py  reporter.py
reconx/reconx/rules/: __init__.py  evaluator.py  loader.py
reconx/reconx/scheduler/: __init__.py  scheduler.py
reconx/tests/: test_adapters.py  test_cmd_run.py  test_nmap_parser.py  test_reporter.py  test_rules.py  test_scheduler.py
ui/: App.axaml  App.axaml.cs  MainViewModel.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Warwalker.UI.csproj  app.manifest
