[project]
name = "pwnzocchi"
version = "0.1.0"
description = "Wi-Fi handshake capture utilities"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["core/tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
